# monster

./: .gitignore  CMakeLists.txt  QuotientNgConfig.cmake.in  README.md
cmake/: QuotientNgConfig.cmake.in
examples/: CMakeLists.txt
examples/src/: CMakeLists.txt  foreigntypes.h  main.cpp  roomavatarimageprovider.cpp  roomavatarimageprovider.h  roomsmodel.cpp  roomsmodel.h  timelinemodel.cpp  timelinemodel.h
examples/src/qml/: Main.qml  RoomListPage.qml  RoomPage.qml
src/: CMakeLists.txt  accounts.cpp  accounts.h  app.cpp  app.h  connection.cpp  connection.h  connection_p.h  copy_header.sh.in  dispatcher.cpp  dispatcher.h  main.cpp  neochatroomtype.h  pendingconnection.cpp  pendingconnection.h  quotient_export.h  room.cpp  room.h  room_p.h  roomavatarimageprovider.cpp  roomavatarimageprovider.h  roomsmodel.cpp  roomsmodel.h  roomsortparameter.cpp  roomsortparameter.h  roomstream.cpp  roomstream.h  roomtreeitem.cpp  roomtreeitem.h  roomtreemodel.cpp  roomtreemodel.h  sortfilterroomtreemodel.cpp  timelinemodel.cpp  timelinemodel.h  utils.cpp  utils.h
src/qml/: Main.qml  RoomDelegate.qml  RoomListPage.qml  RoomPage.qml
src/sdk/: Cargo.toml  build.rs
src/sdk/include/: callbacks.h
src/sdk/src/: connection.rs  ffi.rs  lib.rs  room.rs  roomlistitem.rs  roomlistroom.rs  task.cpp  task.h  tombstone.rs
