# SPDX-FileCopyrightText: Tobias Fella <tobias.fella@kde.org>
# SPDX-License-Identifier: BSD-2-Clause

[package]
name = "sdk"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
chrono = "0.4.39"
cxx = { version = "1.0.137", features = ["c++20"] }
dirs = "6.0.0"
eyeball-im = "0.6.0"
matrix-sdk = { version = "0.9.0", default-features = false, features = ["bundled-sqlite", "rustls-tls", "e2e-encryption", "sqlite", "experimental-sliding-sync"] }
matrix-sdk-ui = { version = "0.9.0", default-features = false, features = ["rustls-tls"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = "0.1.17"

[build-dependencies]
cxx-build = "1.0.137"
