# SPDX-FileCopyrightText: Tobias Fella <tobias.fella@kde.org>
# SPDX-License-Identifier: BSD-2-Clause

[package]
name = "sdk"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
chrono = "0"
cxx = { version = "1", features = ["c++20"] }
dirs = "6.0.0"
eyeball-im = "0"
http = "1"
matrix-sdk = { version = "0.16", default-features = false, features = ["bundled-sqlite", "rustls-tls", "e2e-encryption", "sqlite"] }
matrix-sdk-ui = { version = "0.16", default-features = false, features = ["rustls-tls"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0"

[build-dependencies]
cxx-build = "1"
